k8s/overlays/dev/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myblog-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: myblog-api
