k8s/overlays/dev/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myblog-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myblog-postgres
  template:
    metadata:
      labels:
        app: myblog-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: myblog-postgres
spec:
  selector:
    app: myblog-postgres
  ports:
    - port: 5432
      targetPort: 5432
